[Bug 378151] Rap: Support for mobile devices
https://bugs.eclipse.org/bugs/show_bug.cgi?id=378151

- Removed conversion of a groupbox to section -> section looks ugly and has no benefit
- Added hover background to some smartfields, datefields and timefields to improve user feedback
- Removed focus indicator on checkboxes because it makes no sense and looks bad

--- a/org.eclipse.scout.rt.ui.rap.mobile/theme/scout.mobile.css
+++ b/org.eclipse.scout.rt.ui.rap.mobile/theme/scout.mobile.css
@@ -55,6 +55,42 @@ Button-FocusIndicator[PUSH], Button-FocusIndicator[TOGGLE] {
   border: 0px;
 }
 
+Button-FocusIndicator[CHECK] {
+  background-color: transparent;
+  background-image: none;
+  border: 0px;
+}
+
+Button-FocusIndicator[RADIO] {
+  background-color: transparent;
+  background-image: none;
+  border: 0px;
+}
+
+Composite.smartfield:hover {
+  background-image: gradient(
+    linear, left top, left bottom,
+    from( #f9bb6b ),
+    to( #fe9915 )
+  );
+}
+
+Composite.datefield:hover {
+  background-image: gradient(
+    linear, left top, left bottom,
+    from( #f9bb6b ),
+    to( #fe9915 )
+  );
+}
+
+Composite.timefield:hover {
+  background-image: gradient(
+    linear, left top, left bottom,
+    from( #f9bb6b ),
+    to( #fe9915 )
+  );
+}
+
 ScrollBar {
   width: 0px;
 }
